Fix alignment of navbar toggle btn

--- a/wp-content/themes/majafe/scss/navigation.scss
+++ b/wp-content/themes/majafe/scss/navigation.scss
@@ -156,7 +156,7 @@
   top: 0;
   right: 0;
   margin: 0;
-  padding: 10px 10px 7px;
+  padding: 10px 0px 7px 10px;
   overflow: hidden;
 
   cursor: pointer;
